<resources>
    <string name="app_name">Shopping assistance</string>
    <string name="title_home">Zakupy</string>
    <string name="title_dashboard">Kody</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_account">Konto</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="log_in">Zaloguj się</string>
    <string name="register">Nie masz konta? Zarejestruj się</string>
    <string name="password_forget">Zapomniałeś hasła?</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="create_account">Zarejestruj się</string>
    <string name="login_page">Masz już konto? Zaloguj się</string>
    <string name="no_shopping_lists_available">Brak dostępnych list zakupów</string>
    <string name="no_products">Brak produktów. Dodaj jakiś.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_list">Usuń listę</string>
    <string name="do_you_want_to_delete_this_list">Czy na pewno chcesz usunąć tę listę?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="error_while_downloading_from_firestore">Błąd pobierania danych z Firestore</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="add_user">Dodaj użytkownika</string>
    <string name="add">Dodaj</string>
    <string name="cancel">Anuluj</string>
    <string name="name_cant_be_longer_than">Nazwa produktu nie może być dłuższa niż 25 znaków</string>
    <string name="code_cant_be_longer_than">Nazwa kodu nie może być dłuższa niż 20 znaków</string>
    <string name="enter_the_product_name">Podaj nazwę produktu</string>
    <string name="product_added_successfully">Produkt dodany pomyślnie</string>
    <string name="error_while_adding_the_product">Błąd podczas dodawania produktu</string>
    <string name="users_on_the_list">Użytkownicy na liście</string>
    <string name="error_while_downloading_the_list">Błąd pobierania listy użytkowników</string>
    <string name="cant_delete_your_account">Nie możesz usunąć samego siebie</string>
    <string name="user_deleted_from_the_list">Użytkownik usunięty z listy</string>
    <string name="error_while_deleting_the_user">Błąd usuwania użytkownika</string>
    <string name="error_while_downloading_the_user">Błąd pobierania użytkownika do usunięcia</string>
    <string name="user_added_to_the_shopping_list">Użytkownik dodany do listy zakupowej</string>
    <string name="user_already_exists_ont_the_list">Użytkownik już istnieje na liście zakupowej</string>
    <string name="error_while_checking_the_user_data">Błąd sprawdzania użytkownika</string>
    <string name="user_with_this_email_doesnt_exist">Użytkownik o podanym email nie istnieje</string>
    <string name="close">Zamknij</string>
    <string name="name_of_the_list">Nazwa listy</string>
    <string name="add_list">Dodaj listę</string>
    <string name="next">Dalej</string>
    <string name="dark_theme">Motyw ciemny  </string>
    <string name="theme_mode">Tryb ciemny</string>
    <string name="name">Nazwa</string>
    <string name="value">Wartość</string>
    <string name="logged_as">Zalogowano jako:</string>
    <string name="no_barcodes">Brak kodów kreskowych</string>
    <string name="log_out">Wyloguj się</string>
    <string name="add_barcode">Dodaj kod kreskowy</string>
    <string name="give_code_name">Wprowadź nazwę kodu</string>
    <string name="provide_correct_details">Podaj poprawne dane</string>
</resources>